--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "fetch": "^1.1.0",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
