--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "fetch": "^1.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.4",
